--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
         <option value="linkOption">Get the link</option>
     </select>
 
-    <p id="highlightedText">Get Highlighted Text-this should work when automatically selected</p>
-
-    <script src="app.js"></script>
+    <div id="highlightedText"></div>
+    <div id="output"></div>
+    <script src="popup.js"></script>
 </body>
 </html>
+
+
 
