--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
         <option value="linkOption">Get the link</option>
     </select>
 
+    <button id="refreshButton">Refresh Selection</button>
+
     <div id="highlightedText"></div>
     <div id="output"></div>
     <script src="popup.js"></script>
