--- a/index.html
+++ b/index.html
@@ -1,45 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset = "UTF-8">
-    <meta name = "viewport" content = "width=device-width, initial-scale=3.0">
-    <title>Research paper toolkit</title>
-
-    <style>
-        body {
-          width: 400px;
-          padding: 10px;
-          font-family: Arial, sans-serif;
-        }
-      
-        #highlightedText {
-          max-width: 100%;
-          white-space: pre-wrap;
-        }
-      </style>
-
+  <title>PDF Research Toolkit</title>
+  <style>
+    body {
+      width: 350px;
+      font-family: Arial, sans-serif;
+      padding: 10px;
+    }
+    #selectedTextPreview {
+      margin: 10px 0;
+      padding: 10px;
+      border: 1px solid #ccc;
+      max-height: 100px;
+      overflow-y: auto;
+      font-size: 12px;
+      background-color: #f5f5f5;
+    }
+    button {
+      margin: 5px;
+      padding: 5px 10px;
+    }
+    select {
+      width: 100%;
+      margin: 10px 0;
+      padding: 5px;
+    }
+    #output {
+      margin-top: 10px;
+      padding: 10px;
+      border: 1px solid #ddd;
+      min-height: 50px;
+    }
+    .status {
+      color: #666;
+      font-style: italic;
+      margin-bottom: 10px;
+    }
+  </style>
 </head>
 <body>
-    <h1>Research Paper toolkit</h1>
-    <p>we mainly do three main functions- take in a highlighted text (that goes into the AI model
-        the ai model return a string that is shown on the extension), gives a synopsis?- not really
-        sure about this.</p> 
-
-
-    <label for="dropdown">Choose an option:</label>
-    <select id="dropdown" name="dropdown">
-        <option value="summaryOption">Get the summary</option>
-        <option value="synopsisOption">Get the synopsis</option>
-        <option value="linkOption">Get the link</option>
-    </select>
-
-    <button id="refreshButton">Refresh Selection</button>
-
-    <div id="highlightedText"></div>
-    <div id="output"></div>
-    <script src="popup.js"></script>
+  <h2>PDF Research Toolkit</h2>
+  
+  <div class="status">Select text in your PDF, then use the options below.</div>
+  
+  <div id="selectedTextPreview">No text selected yet. Please select text in your PDF document.</div>
+  
+  <button id="refreshSelection">Refresh Selection</button>
+  
+  <select id="actionDropdown">
+    <option value="">-- Select Action --</option>
+    <option value="summaryOption">Generate Summary</option>
+    <option value="synopsisOption">Create Synopsis</option>
+    <option value="linkOption">Find Related Links</option>
+  </select>
+  
+  <div id="output">Output will appear here.</div>
+  
+  <script src="popup.js"></script>
 </body>
 </html>
-
-
-
