--- a/popup.html
+++ b/popup.html
@@ -12,18 +12,22 @@
       margin-top: 0;
       color: #333;
     }
+    .section {
+      margin-bottom: 15px;
+    }
     #selectionContainer {
       border: 1px solid #ddd;
       padding: 10px;
       max-height: 150px;
       overflow-y: auto;
       background-color: #f9f9f9;
-      margin-bottom: 15px;
       font-size: 14px;
       line-height: 1.4;
     }
     .controls {
-      margin-bottom: 15px;
+      margin: 10px 0;
+      display: flex;
+      gap: 5px;
     }
     button {
       background-color: #4285f4;
@@ -32,10 +36,17 @@
       padding: 8px 12px;
       cursor: pointer;
       border-radius: 4px;
-      margin-right: 5px;
     }
     button:hover {
       background-color: #3367d6;
+    }
+    #manualTextarea {
+      width: 100%;
+      height: 100px;
+      padding: 8px;
+      margin-top: 5px;
+      font-family: Arial, sans-serif;
+      display: none;
     }
     select {
       padding: 8px;
@@ -53,6 +64,12 @@
       color: #666;
       margin-bottom: 10px;
     }
+    .toggle {
+      margin-top: 10px;
+      color: #4285f4;
+      cursor: pointer;
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
@@ -62,20 +79,33 @@
     Select text in your PDF, then click "Capture Selection" below
   </div>
   
-  <div id="selectionContainer">No text captured yet</div>
-  
-  <div class="controls">
-    <button id="captureButton">Capture Selection</button>
+  <div class="section">
+    <div id="selectionContainer">No text captured yet</div>
+    
+    <div class="controls">
+      <button id="captureButton">Capture Selection</button>
+      <button id="clearButton">Clear</button>
+    </div>
+    
+    <div class="toggle" id="manualToggle">Can't select text? Click here to enter text manually</div>
+    <textarea id="manualTextarea" placeholder="Paste or type text here..."></textarea>
+    <div class="controls" id="manualControls" style="display: none;">
+      <button id="saveManualText">Save Text</button>
+    </div>
   </div>
   
-  <select id="actionDropdown">
-    <option value="">-- Select Action --</option>
-    <option value="summaryOption">Generate Summary</option>
-    <option value="synopsisOption">Create Synopsis</option>
-    <option value="linkOption">Find Related Links</option>
-  </select>
+  <div class="section">
+    <select id="actionDropdown">
+      <option value="">-- Select Action --</option>
+      <option value="summaryOption">Generate Summary</option>
+      <option value="synopsisOption">Create Synopsis</option>
+      <option value="linkOption">Find Related Links</option>
+    </select>
+  </div>
   
-  <div id="output">Results will appear here</div>
+  <div class="section">
+    <div id="output">Results will appear here</div>
+  </div>
   
   <script src="popup.js"></script>
 </body>
